--- a/src/gflags_declare.h.in
+++ b/src/gflags_declare.h.in
@@ -37,10 +37,32 @@
 #ifndef GFLAGS_DECLARE_H_
 #define GFLAGS_DECLARE_H_
 
+// ---------------------------------------------------------------------------
+// Meta-information
 
-#if !defined(GFLAGS_DLL_DECL)
-#  if defined(_MSC_VER)
-#    if defined(GFLAGS_DLL_EXPORT)
+// Version number of gflags library.
+#define GFLAGS_VERSION_STRING "@PACKAGE_VERSION@"
+
+#define GFLAGS_VERSION_MAJOR @PACKAGE_VERSION_MAJOR@ ///< Major version number.
+#define GFLAGS_VERSION_MINOR @PACKAGE_VERSION_MINOR@ ///< Minor version number.
+#define GFLAGS_VERSION_PATCH @PACKAGE_VERSION_PATCH@ ///< Version patch number.
+
+// Whether gflags library is shared. Used for DLL import declaration.
+#cmakedefine GFLAGS_SHARED_LIBS
+
+// ---------------------------------------------------------------------------
+// Namespace for gflags symbols.
+#define GFLAGS_NAMESPACE @GFLAGS_NAMESPACE@
+
+// ---------------------------------------------------------------------------
+// Unused attribute declaration for GNU GCC.
+#define GFLAGS__ATTRIBUTE__UNUSED @GFLAGS__ATTRIBUTE_UNUSED@
+
+// ---------------------------------------------------------------------------
+// Windows DLL import/export.
+#ifndef GFLAGS_DLL_DECL
+#  if defined(_MSC_VER) && defined(GFLAGS_SHARED_LIBS)
+#    ifdef GFLAGS_DLL_EXPORT
 #      define GFLAGS_DLL_DECL __declspec(dllexport)
 #    else
 #      define GFLAGS_DLL_DECL __declspec(dllimport)
@@ -50,29 +72,45 @@
 #  endif
 #endif
 
+// We always want to export defined variables, dll or no
+#if defined(_MSC_VER)
+#  define GFLAGS_DLL_DEFINE_FLAG __declspec(dllexport)
+#else
+#  define GFLAGS_DLL_DEFINE_FLAG
+#endif
+
 // We always want to import declared variables, dll or no
-#if !defined(GFLAGS_DLL_DECLARE_FLAG)
-#  if defined(_MSC_VER)
-#    define GFLAGS_DLL_DECLARE_FLAG __declspec(dllimport)
+#if defined(_MSC_VER)
+#  define GFLAGS_DLL_DECLARE_FLAG __declspec(dllimport)
+#else
+#  define GFLAGS_DLL_DECLARE_FLAG
+#endif
+
+// Export/import of STL class instantiations
+// \sa http://support.microsoft.com/default.aspx?scid=KB;EN-US;168958
+#if defined(GFLAGS_SHARED_LIBS) && defined(_MSC_VER) && _MSC_VER >= 1100
+#  ifdef GFLAGS_DLL_EXPORT
+#    define GFLAGS_EXTERN_STL
 #  else
-#    define GFLAGS_DLL_DECLARE_FLAG
+#    define GFLAGS_EXTERN_STL extern
 #  endif
 #endif
 
-
+// ---------------------------------------------------------------------------
+// Types
 #include <string>
 #if @HAVE_STDINT_H@
-#include <stdint.h>         // the normal place uint16_t is defined
+#  include <stdint.h>         // the normal place uint16_t is defined
 #endif
 #if @HAVE_SYS_TYPES_H@
-#include <sys/types.h>      // the normal place u_int16_t is defined
+#  include <sys/types.h>      // the normal place u_int16_t is defined
 #endif
 #if @HAVE_INTTYPES_H@
-#include <inttypes.h>       // a third place for uint16_t or u_int16_t
+#  include <inttypes.h>       // a third place for uint16_t or u_int16_t
 #endif
 
 
-namespace @GFLAGS_NAMESPACE@ {
+namespace GFLAGS_NAMESPACE {
 
 #if @HAVE_uint16_t@         // the C99 format
 typedef int32_t  int32;
@@ -93,7 +131,7 @@ typedef unsigned __int64 uint64;
 #  error Do not know how to define a 32-bit integer quantity on your system
 #endif
 
-} // namespace @GFLAGS_NAMESPACE@
+} // namespace GFLAGS_NAMESPACE
 
 
 namespace fLS {
